plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'io.freefair.lombok' version '8.6'
    id 'org.graalvm.buildtools.native' version '0.10.2'
}

group = 'space.yong.orkes'
version = '1.0'

java {
    sourceCompatibility = '22'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.orkes.conductor:orkes-conductor-client:2.1.1'
    implementation ('com.google.api-client:google-api-client:2.6.0') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation 'com.google.oauth-client:google-oauth-client:1.36.0'
}

graalvmNative {
    binaries {
        main {
            buildArgs.add('--verbose')
            buildArgs.add('--add-opens=java.base/java.nio=ALL-UNNAMED')
            buildArgs.add('--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED')
            buildArgs.add('--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED')
            buildArgs.add('--trace-class-initialization=ch.qos.logback.classic.Logger')
            buildArgs.add('--trace-object-instantiation=ch.qos.logback.core.AsyncAppenderBase$Worker')
            buildArgs.add('--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback')
            buildArgs.add('--initialize-at-run-time=io.netty')
        }
    }
}

bootBuildImage {
    pullPolicy = "IF_NOT_PRESENT"
    docker {
        publishRegistry {
            username = "$System.env.DOCKER_USER"
            password = "$System.env.DOCKER_PASS"
        }
    }
}
